--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int07/int07-7/int07-7-4/int07-7-4.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int07/int07-7/int07-7-4/int07-7-4.component.html
@@ -1,3 +1,114 @@
-<p>
-  int07-7-4 works!
-</p>
+<div class="ui grid">
+  <div class="sixteen wide column">
+    <h2 class="ui header">กระดาษทำการเงินประกันอื่น</h2>
+
+    <div class="ui top attached header">
+      <span>กระดาษทำการเงินประกันอื่น</span>
+    </div>
+
+    <div class="ui attached segment">
+      <div class="ui form">
+        <div class="inline fields">
+          <div class="ten wide field">
+            <label class="custom-label-w-20">กระดาษทำการ</label>
+            <input type="text" style="margin-left: 14px;" value="ตรวจสอบสำนักงานสรรพสามิตพื้นที่ระยอง 1">
+          </div>
+        </div>
+        <br>
+        <div class="inline fields">
+          <div class="seven wide field"></div>
+          <div class="nine wide field">
+            <label>บัญชีเงินประกันอื่น (2112010199)</label>
+          </div>
+        </div>
+        <br>
+        <div class="inline fields">
+          <div class="ten wide field">
+            <label class="custom-label-w-20">ณ วันที่</label>
+            <input type="text" style="margin-left: 14px;" value="30 กันยายน 2559">
+          </div>
+        </div>
+        <br>
+        <div class="inline fields">
+          <h3>วิเคราะห์เปรียบเทียบเงินประกันอื่น</h3>
+        </div>
+
+        <div class="inline fields">
+          <div class="thirteen wide field">
+            <span>ยอดคงเหลือบัญชีเงินประกันอื่นตามงบทดลองในระบบ GFMIS</span>
+          </div>
+          <div class="three wide field">
+            <span>-9,915.00</span>
+          </div>
+        </div>
+
+        <div class="inline fields">
+          <div class="thirteen wide field">
+            <span>ยอดคงเหลือเงินฝากคลัง 10910 ตามรายงานเคลื่อนไหวเงินฝากคลัง (ZGL_RPT013)</span>
+          </div>
+          <div class="three wide field">
+            <u>6,750.00</u>
+          </div>
+        </div>
+
+        <div class="inline fields">
+          <div class="thirteen wide field">
+            <h4>ผลต่าง</h4>
+          </div>
+          <div class="three wide field">
+            <u>-3,165.00</u>
+          </div>
+        </div>
+        <br>
+        <div class="inline fields">
+          <h3>วิเคราะห์รายละเอียดบัญชีย่อยเงินประกันอื่น</h3>
+        </div>
+
+        <div class="inline fields">
+          <div class="thirteen wide field">
+            <span>ยอดคงเหลือตามรายงานเคลื่อนไหวเงินฝากคลัง รหัส 10910</span>
+          </div>
+          <div class="three wide field">
+            <span>6,750</span>
+          </div>
+        </div>
+
+        <div class="inline fields">
+          <div class="thirteen wide field">
+            <span>ยอดคงเหลือเงินประกันอื่นในทะเบียนคุมเงินประกัน</span>
+          </div>
+          <div class="three wide field">
+            <u>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+              &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+            </u>
+          </div>
+        </div>
+
+        <div class="inline fields">
+          <div class="thirteen wide field">
+            <h4>ผลต่าง</h4>
+          </div>
+          <div class="three wide field">
+            <u>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+              &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+            </u>
+          </div>
+        </div>
+
+        <div class="ui center aligned grid">
+          <div class="four wide column">
+            <button class="ui mini primary button width-100">
+              <i class="print icon"></i>
+              พิมพ์
+            </button>
+            <button class="ui mini button width-100" routerLink="/int07-7">
+              <i class="arrow left icon"></i>
+              ย้อนหลับ
+            </button>
+          </div>
+        </div>
+
+      </div>
+    </div>
+  </div>
+</div>
