--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-1/int08-1-2/int08-1-2.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-1/int08-1-2/int08-1-2.component.html
@@ -1,3 +1,288 @@
-<p>
-  int08-1-2 works!
-</p>
+<div class="ui grid">
+  <div class="sixteen wide column">
+    <h2 class="ui header">ประเมินความเสี่ยงโครงการด้านประสิทธิภาพ</h2>
+
+    <div class="ui top attached header">
+      <span>ประเมินความเสี่ยงโครงการด้านประสิทธิภาพ</span>
+    </div>
+
+    <div class="ui attached segment">
+      <div class="ui form">
+        <div class="inline fields">
+          <div class="nine wide field ">
+            <label style="width: 40em">ประเมินความเสี่ยงโครงการด้านประสิทธิภาพ</label>
+            <input type="file" />
+          </div>
+        </div>
+      </div>
+
+      <div class="ui center aligned grid">
+        <div class="four wide column">
+          <button class="ui mini primary button" (click)="uploadData()">
+            <i class="upload icon"></i>
+            อัพโหลด
+          </button>
+          <button class="ui mini button" (click)="clearData()">
+            <i class="refresh icon"></i>
+            ล้างข้อมูล
+          </button>
+        </div>
+      </div>
+
+    </div>
+
+    <div class="ui segment" *ngIf="showData">
+      <div class="ui right aligned grid">
+        <div class="sixteen wide column">
+          <button class="ui mini primary button">
+            <i class="print icon"></i>
+            พิมพ์
+          </button>
+        </div>
+      </div>
+
+      <table class="ui small celled table">
+        <thead>
+          <tr style="text-align: center;">
+            <th rowspan="2">ลำดับ</th>
+            <th rowspan="2">โครงการตามยุทธศาสตร์</th>
+            <th rowspan="2">หน่วยงาน</th>
+            <th rowspan="2">สถานะ</th>
+            <th colspan="2">วิเคราะห์</th>
+          </tr>
+          <tr style="text-align: center;">
+            <th style="border-left: 1px solid rgba(34,36,38,.1);">
+              <a href="javascript:;" (click)="popupEditData()">
+                RL
+              </a>
+            </th>
+            <th>
+              <a href="javascript:;" (click)="popupEditData()">
+                แปลค่า
+              </a>
+            </th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td>1</td>
+            <td>9. โครงการซ่อมบำรุงรักษา สอบเทียบ และจัดหาอะไหล่ระบบเครื่องมือวัดปริมาณน้ำสุราแช่ออนไลน์</td>
+            <td>กตท.</td>
+            <td>3</td>
+            <td class="bg-red">3</td>
+            <td class="bg-red">สูง</td>
+          </tr>
+          <tr>
+            <td>2</td>
+            <td>10. โครงการติดตั้งเครื่องพิมพ์โค๊ดและระบบตรวจสอบการเสียภาษีสุราแช่แบบใหม่</td>
+            <td>กตท.</td>
+            <td>3</td>
+            <td class="bg-red">3</td>
+            <td class="bg-red">สูง</td>
+          </tr>
+          <tr>
+            <td>3</td>
+            <td>15. โครงการตรวจสอบการส่งออกสินค้าในการกำกับดูแลของกรมสรรพสามิต</td>
+            <td>สตป.</td>
+            <td>3</td>
+            <td class="bg-red">3</td>
+            <td class="bg-red">สูง</td>
+          </tr>
+          <tr>
+            <td>4</td>
+            <td>50.โครงการเพิ่มศักยภาพงานด้านการตรวจพิสูจน์และจัดการของกลาง</td>
+            <td>สกม.</td>
+            <td>3</td>
+            <td class="bg-red">3</td>
+            <td class="bg-red">สูง</td>
+          </tr>
+          <tr>
+            <td>5</td>
+            <td>51.โครงการให้ความรู้เพื่อพัฒนาศักยภาพของเจ้าหน้าที่ในการดำเนินคดี</td>
+            <td>สกม.</td>
+            <td>3</td>
+            <td class="bg-red">3</td>
+            <td class="bg-red">สูง</td>
+          </tr>
+          <tr>
+            <td>6</td>
+            <td>2. โครงการปรับปรุงมาตรฐานการจัดเก็บภาษีเพื่อประสิทธิภาพการจัดเก็บภาษี</td>
+            <td>สผษ.</td>
+            <td>2</td>
+            <td class="bg-yellow">2</td>
+            <td class="bg-yellow">กลาง</td>
+          </tr>
+          <tr>
+            <td>7</td>
+            <td>3. โครงการพัฒนาและปรับปรุงการบริหารการจัดเก็บภาษีสำหรับสุรา เบียร์ และเอทานอล ให้สอดคล้องกับร่างพระราชบัญญัติภาษีสรรพสามิตฉบับใหม่</td>
+            <td>สมฐ.1</td>
+            <td>2</td>
+            <td class="bg-yellow">2</td>
+            <td class="bg-yellow">กลาง</td>
+          </tr>
+          <tr>
+            <td>8</td>
+            <td>4. โครงการ จัดกลุ่มสินค้าสารละลายประเภทไฮโดรคาร์บอน เพื่อรองรับระบบควบคุมสารสนเทศสารละลายไฮโดรคาร์บอน (Hydrocarbon
+              Solvent)
+            </td>
+            <td>สมฐ.2</td>
+            <td>2</td>
+            <td class="bg-yellow">2</td>
+            <td class="bg-yellow">กลาง</td>
+          </tr>
+          <tr>
+            <td>9</td>
+            <td>7. โครงการแยกชนิดวัตถุดิบที่ใช้ทำไวน์โดยใช้เทคนิค NMR เพื่อการจัดเก็บภาษีที่ยั่งยืน</td>
+            <td>กวข.</td>
+            <td>2</td>
+            <td class="bg-yellow">2</td>
+            <td class="bg-yellow">กลาง</td>
+          </tr>
+          <tr>
+            <td>10</td>
+            <td>8. โครงการพัฒนามาตรฐานการบริหารการจัดเก็บภาษีสรรพสามิตสินค้าน้ำมันและผลิตภัณฑ์น้ำมัน เพื่อรองรับกฎหมายใหม่</td>
+            <td>สมฐ.2</td>
+            <td>2</td>
+            <td class="bg-yellow">2</td>
+            <td class="bg-yellow">กลาง</td>
+          </tr>
+          <tr>
+            <td>11</td>
+            <td>1. โครงการติดตามและวิเคราะห์ผลการจัดเก็บรายได้ภาษีสรรพสามิตเป็นรายสินค้าและรายเดือน</td>
+            <td>สผษ.</td>
+            <td>1</td>
+            <td class="bg-green">1</td>
+            <td class="bg-green">ต่ำ</td>
+          </tr>
+          <tr>
+            <td>12</td>
+            <td>5. โครงการตรวจวิเคราะห์คุณภาพสุราเชิงรุกเพื่อการพัฒนาที่ยั่งยืน</td>
+            <td>กวข.</td>
+            <td>1</td>
+            <td class="bg-green">1</td>
+            <td class="bg-green">ต่ำ</td>
+          </tr>
+          <tr>
+            <td>13</td>
+            <td>6. โครงการตรวจสอบเครื่องดื่มน้ำผลไม้และน้ำพืชผักเพื่อสังคมที่ดีและการจัดเก็บภาษีที่มีมาตรฐานโปร่งใสเป็นธรรม</td>
+            <td>กวข.</td>
+            <td>1</td>
+            <td class="bg-green">1</td>
+            <td class="bg-green">ต่ำ</td>
+          </tr>
+          <tr>
+            <td>14</td>
+            <td>11. โครงการป้องกันและปราบปรามผู้กระทำผิดกฎหมายสรรพสามิต</td>
+            <td>สตป.</td>
+            <td>1</td>
+            <td class="bg-green">1</td>
+            <td class="bg-green">ต่ำ</td>
+          </tr>
+          <tr>
+            <td>15</td>
+            <td>13. โครงการบูรณาการตรวจสอบสินค้าน้ำมันเพื่อป้องกันการหลีกเลี่ยงภาษีสรรพสามิตอย่างยั่งยืน</td>
+            <td>กวข.</td>
+            <td>1</td>
+            <td class="bg-green">1</td>
+            <td class="bg-green">ต่ำ</td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
+
+  </div>
+</div>
+
+<div id="modalInt0812" class="ui modal hidden transition">
+  <i class="close icon"></i>
+  <div class="header">
+    กำหนดเงื่อนไข RL และแปลงค่า
+  </div>
+
+  <div class="content">
+    <div class="ui form">
+      <div class="inline fields">
+        <div class="five wide field">
+          <label class="custom-label-w-10">เงื่อนไขที่ 1</label>
+          <select id="select1" class="ui dropdown">
+            <option value="0">Equal</option>
+            <option value="1">Not Equal</option>
+          </select>
+        </div>
+        <div class="three wide field">
+          <input type="text" value="5,000,000">
+        </div>
+        <div class="four wide field">
+          <label class="custom-label-w-25">กำหนดค่าเป็น</label>
+          <input type="text" value="1">
+        </div>
+        <div class="four wide field">
+          <label class="custom-label-w-25">กำหนดค่าเป็น</label>
+          <input type="text" value="ต่ำ">
+        </div>
+      </div>
+
+      <div class="inline fields">
+        <div class="five wide field">
+          <label class="custom-label-w-10">เงื่อนไขที่ 2</label>
+          <select id="select2" class="ui dropdown">
+            <option value="0">Equal</option>
+            <option value="1">Not Equal</option>
+          </select>
+        </div>
+        <div class="three wide field">
+          <input type="text" value="5,000,001">
+        </div>
+        <div class="four wide field">
+          <label class="custom-label-w-25">กำหนดค่าเป็น</label>
+          <input type="text" value="2">
+        </div>
+        <div class="four wide field">
+          <label class="custom-label-w-25">กำหนดค่าเป็น</label>
+          <input type="text" value="กลาง">
+        </div>
+      </div>
+
+      <div class="inline fields">
+        <div class="five wide field">
+          <label class="custom-label-w-10">เงื่อนไขที่ 3</label>
+          <select id="select3" class="ui dropdown">
+            <option value="0">Equal</option>
+            <option value="1">Not Equal</option>
+          </select>
+        </div>
+        <div class="three wide field">
+          <input type="text" value="50,000,000">
+        </div>
+        <div class="four wide field">
+          <label class="custom-label-w-25">กำหนดค่าเป็น</label>
+          <input type="text" value="3">
+        </div>
+        <div class="four wide field">
+          <label class="custom-label-w-25">กำหนดค่าเป็น</label>
+          <input type="text" value="สูง">
+        </div>
+      </div>
+
+    </div>
+  </div>
+
+  <div class="actions">
+    <div class="ui center aligned grid">
+      <div class="six wide column">
+        <button class="ui mini primary button width-100">
+          <i class="add icon"></i>
+          เพิ่ม
+        </button>
+        <button class="ui mini primary button width-100">
+          <i class="save icon"></i>
+          บันทึก
+        </button>
+        <button class="ui mini button width-100" (click)="closePopupEdit()">
+          <i class="close icon"></i>
+          ปิด
+        </button>
+      </div>
+    </div>
+  </div>
+</div>
