--- a/workspace/ims-client/src/styles.css
+++ b/workspace/ims-client/src/styles.css
@@ -75,6 +75,18 @@ label.custom-label-w-5 {
     background-color: rgb(250, 250, 251) !important;
 }
 
+.bg-red {
+    background-color: rgb(248, 141, 139) !important;
+}
+
+.bg-yellow {
+    background-color: rgb(247, 245, 131) !important;
+}
+
+.bg-green {
+    background-color: rgb(139, 248, 148) !important;
+}
+
 td.right {
     text-align: right !important;
 }
