--- a/workspace/ims-client/src/app/buckwaframework/project/pages/select-form/select-form.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/pages/select-form/select-form.component.html
@@ -64,56 +64,154 @@
                             <i class="folder icon"></i>
                             <div class="content">
                                 <div class="header">ประเภทกระดาษทำการ</div>
-                                <!-- <div class="description">Compiled CSS and JS files</div> -->
                                 <div class="list">
                                     <div class="item">
                                         <i class="folder icon"></i>
                                         <div class="content">
-                                            <div class="header">กระดาษทำการรับ-จ่ายวัตถุดิบ</div>
-                                            <!-- <div class="description">Individual component CSS and JS</div> -->
+                                            <div class="header">สินค้า</div>
                                             <div class="list">
                                                 <div class="item hand-click">
                                                     <i class="file text outline icon"></i>
                                                     <div class="content">
-                                                        <div class="header">การะดาษทำการเบิกใช้วัตถุดิบ</div>
-                                                        <!-- <div class="description">Individual component CSS and JS</div> -->
+                                                        <div class="header">
+                                                            <a href="javascript:;" (click)="clickMenuMat()">กระดาษทำการรับ-จ่ายวัตถุดิบ</a>
+                                                        </div>
                                                     </div>
                                                 </div>
-                                                <div class="item hand-click">
-                                                    <i class="file text outline icon"></i>
-                                                    <div class="content">
-                                                        <div class="header">กระดาษทำการรับสินค้าสำเร็จรูป</div>
-                                                        <!-- <div class="description">Individual component CSS and JS</div> -->
-                                                    </div>
-                                                </div>
-                                                <div class="item hand-click">
-                                                    <i class="file text outline icon"></i>
-                                                    <div class="content">
-                                                        <div class="header">กระดาษทำการตรวจสอบการลดหย่อนภาษี</div>
-                                                        <!-- <div class="description">Individual component CSS and JS</div> -->
-                                                    </div>
-                                                </div>
-                                                <div class="item hand-click">
-                                                    <i class="file text outline icon"></i>
-                                                    <div class="content">
-                                                        <div class="header">กระดาษทำการส่งออกรถยนต์เพื่อจำหน่าย</div>
-                                                        <!-- <div class="description">Individual component CSS and JS</div> -->
-                                                    </div>
-                                                </div>
+                                            </div>
+                                            <div class="list">
                                                 <div class="item hand-click">
                                                     <i class="file text outline icon"></i>
                                                     <div class="content">
                                                         <div class="header">
-                                                            <a href="javascript:;" routerLink="/select-new-form">สร้างกระดาษทำการใหม่
-                                                                </a>
+                                                            <a href="javascript:;" routerLink="/select-new-form">กระดาษทำการหาความสัมพันธ์
+                                                                <br>การเบิกใช้วัตถุดิบกับการรับสินค้าสำเร็จรูป</a>
                                                         </div>
-                                                        <!-- <div class="description">Individual component CSS and JS</div> -->
+                                                    </div>
+                                                </div>
+                                            </div>
+                                            <div class="list">
+                                                <div class="item hand-click">
+                                                    <i class="file text outline icon"></i>
+                                                    <div class="content">
+                                                        <div class="header">
+                                                            <a href="javascript:;" (click)="clickMenuIns()">กระดาษทำการรับ-จ่ายสินค้าสำเร็จรูป</a>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                            <div class="list">
+                                                <div class="item hand-click">
+                                                    <i class="file text outline icon"></i>
+                                                    <div class="content">
+                                                        <div class="header">
+                                                            <a href="javascript:;" routerLink="/select-new-form">กระดาษทำการตรวจสอบการลดหย่อนภาษี</a>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                            <div class="list">
+                                                <div class="item hand-click">
+                                                    <i class="file text outline icon"></i>
+                                                    <div class="content">
+                                                        <div class="header">
+                                                            <a href="javascript:;" routerLink="/select-new-form">กระดาษทำการตรวจสอบการส่งออก</a>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                            <div class="list">
+                                                <div class="item hand-click">
+                                                    <i class="file text outline icon"></i>
+                                                    <div class="content">
+                                                        <div class="header">
+                                                            <a href="javascript:;" routerLink="/select-new-form">กระดาษทำการตรวจสอบด้านราคา</a>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                            <div class="list">
+                                                <div class="item hand-click">
+                                                    <i class="file text outline icon"></i>
+                                                    <div class="content">
+                                                        <div class="header">
+                                                            <a href="javascript:;" routerLink="/select-new-form">ตารางการคำนวณภาษีที่ต้องชำระเพิ่ม</a>
+                                                        </div>
                                                     </div>
                                                 </div>
                                             </div>
                                         </div>
                                     </div>
                                 </div>
+                                <div class="list">
+                                    <div class="item">
+                                        <i class="folder icon"></i>
+                                        <div class="content">
+                                            <div class="header">บริการ</div>
+                                            <div class="list">
+                                                <div class="item hand-click">
+                                                    <i class="file text outline icon"></i>
+                                                    <div class="content">
+                                                        <div class="header">
+                                                            <a href="javascript:;" routerLink="/select-new-form">กระดาษทำการตรวจสอบด้านปริมาณ</a>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                            <div class="list">
+                                                <div class="item hand-click">
+                                                    <i class="file text outline icon"></i>
+                                                    <div class="content">
+                                                        <div class="header">
+                                                            <a href="javascript:;" routerLink="/select-new-form">กระดาษทำการตรวจสอบด้านราคา</a>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                            <div class="list">
+                                                <div class="item hand-click">
+                                                    <i class="file text outline icon"></i>
+                                                    <div class="content">
+                                                        <div class="header">
+                                                            <a href="javascript:;" routerLink="/select-new-form">กระดาษทำการตรวจสอบด้านมูลค่า</a>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                            <div class="list">
+                                                <div class="item hand-click">
+                                                    <i class="file text outline icon"></i>
+                                                    <div class="content">
+                                                        <div class="header">
+                                                            <a href="javascript:;" routerLink="/select-new-form">กระดาษาทำการตรวจสอบสถานะสมาชิก</a>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                            <div class="list">
+                                                <div class="item hand-click">
+                                                    <i class="file text outline icon"></i>
+                                                    <div class="content">
+                                                        <div class="header">
+                                                            <a href="javascript:;" routerLink="/select-new-form">กระดาษทำการตรวจนับสินค้าคงเหลือ</a>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                            <div class="list">
+                                                <div class="item hand-click">
+                                                    <i class="file text outline icon"></i>
+                                                    <div class="content">
+                                                        <div class="header">
+                                                            <a href="javascript:;" routerLink="/select-new-form">ตารางการคำนวณภาษีที่ต้องชำระเพิ่ม</a>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+
                             </div>
                         </div>
 
@@ -123,7 +221,7 @@
 
                 <div class="nine wide column">
 
-                    <table class="ui small celled table">
+                    <table class="ui small celled table" *ngIf="showSubMenuMat">
                         <thead>
                             <tr>
                                 <th>NO.</th>
@@ -136,7 +234,7 @@
                                     1
                                 </td>
                                 <td>
-                                    <a href="javascript:;" routerLink="/create-form"> กระดาษทำการเปรียบเทียบปริมาณการจำหน่ายสินค้าสำเร็จรูปภายในประเทศ </a>
+                                    <a href="javascript:;" routerLink="/create-paper-receive-material"> กระดาษทำการรับวัตถุดิบ </a>
                                 </td>
                             </tr>
                             <tr>
@@ -144,13 +242,54 @@
                                     2
                                 </td>
                                 <td>
-                                    <a href="javascript:;" routerLink="/create-form"> กระดาษทำการเปรียบเทียบปริมาณการจำหน่ายสินค้าสำเร็จรูปต่างประเทศ </a>
+                                    <a href="javascript:;" routerLink="/create-paper-pay-material"> กระดาษทำการจ่ายวัตถุดิบ </a>
+                                </td>
+                            </tr>
+                            <tr>
+                                <td>
+                                    3
+                                </td>
+                                <td>
+                                    <a href="javascript:;" routerLink="/create-paper-relation-material"> กระดาษทำการตรวจนับวัตถุดิบคงเหลือ </a>
                                 </td>
                             </tr>
                         </tbody>
                     </table>
 
-
+                    <table class="ui small celled table" *ngIf="showSubMenuIns">
+                        <thead>
+                            <tr>
+                                <th>NO.</th>
+                                <th>กระดาษทำการรับ-จ่ายสินค้าสำเร็จรูป</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td>
+                                    1
+                                </td>
+                                <td>
+                                    <a href="javascript:;" routerLink="/create-form"> กระดาษทำการรับสินค้าสำเร็จรูป </a>
+                                </td>
+                            </tr>
+                            <tr>
+                                <td>
+                                    2
+                                </td>
+                                <td>
+                                    <a href="javascript:;" routerLink="/create-form"> กระดาษทำการจ่ายสินค้าสำเร็จรูป </a>
+                                </td>
+                            </tr>
+                            <tr>
+                                <td>
+                                    3
+                                </td>
+                                <td>
+                                    <a href="javascript:;" routerLink="/create-form"> กระดาษทำการตรวจนับสินค้าสำเร็จรูปคงเหลือ </a>
+                                </td>
+                            </tr>
+                        </tbody>
+                    </table>
                 </div>
 
 
