--- a/workspace/ims-client/src/app/buckwaframework/project/pages/select-new-form/select-new-form.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/pages/select-new-form/select-new-form.component.html
@@ -105,14 +105,14 @@
 
             <div class="ui center aligned grid">
                 <div class="six wide column">
-                    <button class="ui primary button" routerLink="/create-new-form">
-            <i class="plus icon"></i>
-            สร้างกระดาษทำการ
-          </button>
-                    <button class="ui button" routerLink="/select-form">
-            <i class="remove icon"></i>
-            ยกเลิก
-          </button>
+                    <button class="ui mini primary button" routerLink="/create-new-form">
+                        <i class="plus icon"></i>
+                        สร้างกระดาษทำการ
+                    </button>
+                    <button class="ui mini button" routerLink="/select-form">
+                        <i class="remove icon"></i>
+                        ยกเลิก
+                    </button>
                 </div>
             </div>
         </div>
