--- a/workspace/ims-client/src/app/buckwaframework/project/pages/create-new-form/create-new-form.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/pages/create-new-form/create-new-form.component.html
@@ -51,18 +51,27 @@
             </div>
         </div>
 
-        <div class="ui segment">
-            <h3 class="ui header">อัพโหลด Template ข้อมูลสำหรับการสร้างกระดาษทำการใหม่</h3>
-            <div class="ui grid">
-                <div class="six wide column">
-                    <input type="file" />
+        <div class="ui top attached header">
+            <span>อัพโหลด Template ข้อมูลสำหรับการสร้างกระดาษทำการใหม่</span>
+        </div>
+
+        <div class="ui attached segment">
+            <div class="ui form">
+                <div class="inline fields">
+                    <div class="eight wide field ">
+                        <label class="custom-label-w-25">เลือกไฟล์ Template ข้อมูล</label>
+                        <input type="file" />
+                    </div>
                 </div>
+            </div>
+
+            <div class="ui center aligned grid">
                 <div class="four wide column">
-                    <button class="ui primary button" (click)="onClickUpload()">
+                    <button class="ui mini primary button" (click)="uploadData()">
                         <i class="upload icon"></i>
                         อัพโหลด
                     </button>
-                    <button class="ui button" (click)="onclickDelete()">
+                    <button class="ui mini button" (click)="clearData()">
                         <i class="trash outline icon"></i>
                         ลบไฟล์
                     </button>
@@ -70,12 +79,12 @@
             </div>
         </div>
 
-        <div class="ui segment" *ngIf="showUploadDetail">
+        <div class="ui segment" *ngIf="showData">
             <div class="ui grid center aligned">
                 <div class="sixteen wide column">
                     บ. ฮอนด้า มอเตอร์ ประเทศไทย
                     <br> กระดาษทำการเปรียบเทียบปริมาณจำหน่ายรถยนต์สำเร็จรูปในประเทศ
-                    <br> เดือน มีนาคม 2559
+                    <br> เดือน พ.ย. 2559 - ส.ค. 2559
                 </div>
             </div>
 
@@ -107,7 +116,7 @@
                         <td style="text-align: right;">904,010.65
                         </td>
                         <td style="text-align: right;">
-                            <span class="ui green horizontal label right aligned" style="float: right; width: 70px;">0.00</span>
+                            <span class="ui green horizontal label right aligned" style="float: right;">0.00</span>
                         </td>
                     </tr>
                     <tr>
@@ -120,7 +129,7 @@
                         <td style="text-align: right;">754,331.41
                         </td>
                         <td style="text-align: right;">
-                            <span class="ui red horizontal label right aligned" style="float: right; width: 70px;">39,783.00</span>
+                            <span class="ui red horizontal label right aligned" style="float: right;">39,783.00</span>
                         </td>
                     </tr>
                     <tr>
@@ -133,7 +142,7 @@
                         <td style="text-align: right;">411,693.38
                         </td>
                         <td style="text-align: right;">
-                            <span class="ui green horizontal label right aligned" style="float: right; width: 70px;">0.00</span>
+                            <span class="ui green horizontal label right aligned" style="float: right;">0.00</span>
                         </td>
                     </tr>
                     <tr>
@@ -146,7 +155,7 @@
                         <td style="text-align: right;">143,747.70
                         </td>
                         <td style="text-align: right;">
-                            <span class="ui red horizontal label right aligned" style="float: right; width: 70px;">54,170.00</span>
+                            <span class="ui red horizontal label right aligned" style="float: right;">54,170.00</span>
                         </td>
                     </tr>
                     <tr>
@@ -157,7 +166,7 @@
                         <td style="text-align: right;">2,213,783.70
                         </td>
                         <td style="text-align: right;">
-                            <span class="ui red horizontal label right aligned" style="float: right; width: 70px;">93,953.00</span>
+                            <span class="ui red horizontal label right aligned" style="float: right">93,953.00</span>
                         </td>
                     </tr>
                 </tbody>
@@ -165,26 +174,24 @@
 
             <div class="ui center aligned grid">
                 <div class="six wide column">
-                    <button class="ui primary button" routerLink="/create-new-form">
+                    <button class="ui mini primary button">
                         <i class="print icon"></i>
                         พิมพ์กระดาษทำการ
                     </button>
-                    <button class="ui button" routerLink="/select-form">
-                        <i class="remove icon"></i>
+                    <button class="ui mini button" (click)="clearData()">
+                        <i class="refresh icon"></i>
                         ล้างข้อมูล
                     </button>
                 </div>
             </div>
         </div>
-
-        <!-- <div class="ui segment"> -->
+        <br>
         <div class="ui grid center aligned">
             <div class="sixteen wide column">
-                <button class="ui button" routerLink="/select-new-form">
+                <button class="ui mini button" routerLink="/select-new-form">
                     <i class="arrow left icon"></i>
                     ย้อนกลับ
                 </button>
             </div>
         </div>
-        <!-- </div> -->
     </div>
