--- a/workspace/ims-client/src/app/buckwaframework/project/pages/select-form/select-form.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/pages/select-form/select-form.component.html
@@ -84,7 +84,7 @@
                                                     <i class="file text outline icon"></i>
                                                     <div class="content">
                                                         <div class="header">
-                                                            <a href="javascript:;" routerLink="/select-new-form">กระดาษทำการหาความสัมพันธ์
+                                                            <a href="javascript:;" routerLink="/create-paper-relation-material">กระดาษทำการหาความสัมพันธ์
                                                                 <br>การเบิกใช้วัตถุดิบกับการรับสินค้าสำเร็จรูป</a>
                                                         </div>
                                                     </div>
@@ -267,7 +267,7 @@
                                     3
                                 </td>
                                 <td>
-                                    <a href="javascript:;" routerLink="/create-paper-relation-material"> กระดาษทำการตรวจนับวัตถุดิบคงเหลือ </a>
+                                    <a href="javascript:;" routerLink="/1"> กระดาษทำการตรวจนับวัตถุดิบคงเหลือ </a>
                                 </td>
                             </tr>
                         </tbody>
