add new create paper receive, pay pages

--- a/workspace/ims-client/src/app/buckwaframework/project/pages/select-form/select-form.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/pages/select-form/select-form.component.html
@@ -286,7 +286,7 @@
                                     1
                                 </td>
                                 <td>
-                                    <a href="javascript:;" routerLink="/create-form"> กระดาษทำการรับสินค้าสำเร็จรูป </a>
+                                    <a href="javascript:;" routerLink="/create-paper-receive-instant"> กระดาษทำการรับสินค้าสำเร็จรูป </a>
                                 </td>
                             </tr>
                             <tr>
@@ -294,7 +294,7 @@
                                     2
                                 </td>
                                 <td>
-                                    <a href="javascript:;" routerLink="/create-form"> กระดาษทำการจ่ายสินค้าสำเร็จรูป </a>
+                                    <a href="javascript:;" routerLink="/create-paper-pay-instant"> กระดาษทำการจ่ายสินค้าสำเร็จรูป </a>
                                 </td>
                             </tr>
                             <tr>
