--- a/workspace/ims-client/src/app/app.component.html
+++ b/workspace/ims-client/src/app/app.component.html
@@ -9,25 +9,22 @@
             <i class="dropdown icon"></i>
             <div class="menu">
                 <div class="ui dropdown item">
-                    <i class="dropdown icon"></i>
-                    ตรวจสอบใบเสร็จ
+                    <i class="dropdown icon"></i> ตรวจสอบใบเสร็จ
                     <div class="menu">
-                        <a class="item" [routerLink]="['/check-receipt-tax']" routerLinkActive="active">ภาษีสรรพสามิต และรายได้อื่นๆ</a>
+                        <a class="item" [routerLink]="['/int01-1-1']" routerLinkActive="active">ภาษีสรรพสามิต และรายได้อื่นๆ</a>
                         <a class="item" [routerLink]="['/check-receipt-license']" routerLinkActive="active">ใบอนุญาต</a>
                     </div>
                 </div>
                 <a class="item" [routerLink]="['/2']" routerLinkActive="active">ตรวจสอบการนำส่งรายได้</a>
                 <div class="ui dropdown item">
-                    <i class="dropdown icon"></i>
-                    ตรวจสอบงบสรุปยอดเงินค่าภาษี กับงบทดลองประจำเดือน &nbsp;&nbsp;&nbsp;&nbsp;
+                    <i class="dropdown icon"></i> ตรวจสอบงบสรุปยอดเงินค่าภาษี กับงบทดลองประจำเดือน &nbsp;&nbsp;&nbsp;&nbsp;
                     <div class="menu">
                         <a class="item" [routerLink]="['/int03-1']" routerLinkActive="active">ตรวจสอบ</a>
                         <a class="item" [routerLink]="['/int03-2']" routerLinkActive="active">ตั้งค่าจับคู่รหัสภาษี</a>
                     </div>
                 </div>
                 <div class="ui dropdown item">
-                    <i class="dropdown icon"></i>
-                    ตรวจสอบสถิติการชำระภาษี
+                    <i class="dropdown icon"></i> ตรวจสอบสถิติการชำระภาษี
                     <div class="menu">
                         <a class="item" [routerLink]="['/check-company-payment']" routerLinkActive="active">ตรวจสอบสถิติการชำระภาษี</a>
                         <a class="item" [routerLink]="['/check-company-renew']" routerLinkActive="active">ตรวจสอบสถิติการต่ออายุใบอนุญาต</a>
@@ -35,12 +32,10 @@
                 </div>
                 <a class="item" [routerLink]="['/check-reprint-license']" routerLinkActive="active">ตรวจสอบการพิมพ์ใบอนุญาตซ้ำ</a>
                 <div class="ui simple dropdown item">
-                    <i class="dropdown icon"></i>
-                    ตรวจสอบพัสดุ
+                    <i class="dropdown icon"></i> ตรวจสอบพัสดุ
                     <div class="menu">
                         <div class="ui dropdown item">
-                            <i class="dropdown icon"></i>
-                            ตรวจสอบแสตมป์
+                            <i class="dropdown icon"></i> ตรวจสอบแสตมป์
                             <div class="menu">
                                 <a class="item" [routerLink]="['/int05-1']" routerLinkActive="active">เปรียบเทียบรวมทั้งปีงบประมาณ</a>
                                 <a class="item" [routerLink]="['/int05-2']" routerLinkActive="active">เปรียบเทียบรายสาขา</a>
@@ -51,8 +46,7 @@
                     </div>
                 </div>
                 <div class="ui simple dropdown item">
-                    <i class="dropdown icon"></i>
-                    ตรวจเบิกจ่าย
+                    <i class="dropdown icon"></i> ตรวจเบิกจ่าย
                     <div class="menu">
                         <a class="item" [routerLink]="['/int06-1']" routerLinkActive="active">ตรวจค่าใช้จ่าย</a>
                         <a class="item" [routerLink]="['/int06-2']" routerLinkActive="active">ตรวจสรุปรายการขอเบิก</a>
@@ -63,8 +57,7 @@
                     </div>
                 </div>
                 <div class="ui simple dropdown item">
-                    <i class="dropdown icon"></i>
-                    บัญชี
+                    <i class="dropdown icon"></i> บัญชี
                     <div class="menu">
                         <a class="item" [routerLink]="['/int07-1']" routerLinkActive="active">นำเข้าเอกสาร</a>
                         <a class="item" [routerLink]="['/int07-2']" routerLinkActive="active">ตรวจสอบดุลบัญชีที่แสดงในช่อง "ยอดยกไป" ของงบทดลอง</a>
@@ -76,8 +69,7 @@
                     </div>
                 </div>
                 <div class="ui simple dropdown item">
-                    <i class="dropdown icon"></i>
-                    ประเมินความเสี่ยง
+                    <i class="dropdown icon"></i> ประเมินความเสี่ยง
                     <div class="menu">
                         <a class="item" [routerLink]="['/int08-1']" routerLinkActive="active">ประเมินความเสี่ยงโครงการ</a>
                         <a class="item" [routerLink]="['/int08-2']" routerLinkActive="active">ประเมินความเสี่ยงระบบสารสนเทศ</a>
